--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MovieApp</string>
+    <string name="app_name">Movie</string>
     <string name="rilis">Release : </string>
 </resources>
